recursion.logo.koch.Crab.scala.error
Erreur de compilation :
Crab:6: error: not found: value sqrt
    crab(levels-1, length/sqrt(2));
                          ^Crab:8: error: not found: value sqrt
    crab(levels-1, length/sqrt(2));
                          ^